--- a/src/main/resources/templates/admin/schedule.html
+++ b/src/main/resources/templates/admin/schedule.html
@@ -78,43 +78,15 @@
     </div>
 </header><!-- End Header -->
 
-<main id="main">
-    <div class="container-fluid">
+<main>
+    <section>
+        <div class="container">
 
-        <div class="col-6">
-            <form id="sign-up-form" th:action="@{/}" th:object="${user}" method="post">
-                <div class="mb-3">
-                    <label class="form-label">First Name</label>
-                    <input type="text" class="form-control" id="firstName" name="firstName" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Last Name</label>
-                    <input type="text" class="form-control" id="lastName" name="lastName" required>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" name="passwords" required>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Confirm password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Email</label>
-                    <input type="email" class="form-control" name="email">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Phone</label>
-                    <input type="phone" class="form-control" name="phone">
-                </div>
-                <!--                                <div class="mb-3 form-check">-->
-                <!--                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">-->
-                <!--                                    <label class="form-check-label" for="exampleCheck1">I want email notifications</label>-->
-                <!--                                </div>-->
-                <button type="submit" class="btn btn-primary">Sign Up</button>
-            </form>
+
+
+
         </div>
-    </div>
+    </section>
 </main>
 
 
