--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -95,43 +95,23 @@
                                     <input type="email" class="form-control" name="email" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                                    <label class="form-label">Password</label>
                                     <input type="password" class="form-control" name="passwords" required>
                                 </div>
-                                <button type="submit" class="btn btn-primary">Log In</button>
+                                <button type="submit" class="btn btn-primary">User Log In</button>
                             </form>
                         </div>
                         <div class="col-6">
-                            <form id="sign-up-form" th:action="@{/}" th:object="${user}" method="post">
-                                <div class="mb-3">
-                                    <label class="form-label">First Name</label>
-                                    <input type="text" class="form-control" id="firstName" name="firstName" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label class="form-label">Last Name</label>
-                                    <input type="text" class="form-control" id="lastName" name="lastName" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                                    <input type="password" class="form-control" name="passwords" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="exampleInputPassword1" class="form-label">Confirm password</label>
-                                    <input type="password" class="form-control" id="exampleInputPassword1" required>
-                                </div>
+                            <form>
                                 <div class="mb-3">
                                     <label class="form-label">Email</label>
-                                    <input type="email" class="form-control" name="email">
+                                    <input type="email" class="form-control" name="email" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label class="form-label">Phone</label>
-                                    <input type="phone" class="form-control" name="phone">
+                                    <label class="form-label">Password</label>
+                                    <input type="password" class="form-control" name="passwords" required>
                                 </div>
-                                <div class="mb-3 form-check">
-                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                    <label class="form-check-label" for="exampleCheck1">I want email notifications</label>
-                                </div>
-                                <button type="submit" class="btn btn-primary">Sign Up</button>
+                                <button type="submit" class="btn btn-primary">Admin Log In</button>
                             </form>
                         </div>
                     </div>
