--- a/src/main/resources/templates/profile/appointment.html
+++ b/src/main/resources/templates/profile/appointment.html
@@ -68,6 +68,7 @@
                         <!--                                </li>-->
                         <li><a href="#">Dr B</a></li>
                         <li><a href="#">Dr C</a></li>
+                        <li><a href="#">Dr D</a></li>
                     </ul>
                 </li>
                 <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -78,62 +79,38 @@
     </div>
 </header><!-- End Header -->
 
-<main id="main">
-    <div class="container-fluid">
-
-        <div class="col-6">
-            <form id="sign-up-form" th:action="@{/}" th:object="${user}" method="post">
-                <div class="mb-3">
-                    <label class="form-label">First Name</label>
-                    <input type="text" class="form-control" id="firstName" name="firstName" required>
+<section id="appointment" class="appointment section-bg">
+            <div class="container">
+                <div>
+                    <h3>New appointment? Please choose your physician</h3>
+                    <div th:each="phy : ${phyList}">
+                        <h4>
+                            <a th:href="@{'/new_appointment/' + ${phy.id}}" th:text="${app.physician.firstName + app.physician.lastName}"></a>
+                        </h4>
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label class="form-label">Last Name</label>
-                    <input type="text" class="form-control" id="lastName" name="lastName" required>
+                <div>
+                    <h1> Your appointment</h1>
+                    <table class="table table-striped table-bordered">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th>Physician</th>
+                            <th>Date: Start time</th>
+                            <th>End time</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="app: ${appList}">
+                            <td th:text="${app.physician.firstName + app.physician.lastName}">Physician</td>
+                            <td th:text="${app.startTime}">Start Time</td>
+                            <td th:text="${app.endTime}">End Time</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" name="passwords" required>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Confirm password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Email</label>
-                    <input type="email" class="form-control" name="email">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">Phone</label>
-                    <input type="phone" class="form-control" name="phone">
-                </div>
-                <!--                                <div class="mb-3 form-check">-->
-                <!--                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">-->
-                <!--                                    <label class="form-check-label" for="exampleCheck1">I want email notifications</label>-->
-                <!--                                </div>-->
-                <button type="submit" class="btn btn-primary">Sign Up</button>
-            </form>
-        </div>
-    </div>
-</main>
 
+            </div>
+        </section><!-- End Appointment Section -->
 
-
-
-
-
-
-<div id="preloader"></div>
-<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-<!-- Vendor JS Files -->
-<script src="/vendor/purecounter/purecounter_vanilla.js"></script>
-<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="/vendor/swiper/swiper-bundle.min.js"></script>
-<script src="/vendor/php-email-form/validate.js"></script>
-
-<!-- Template Main JS File -->
-<script src="/js/main.js"></script>
-</body>
+    </body>
 </html>
